force-app/main/default/objects/Service_Injection_Setting__mdt/Service_Injection_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata supporting Dependency Injection of Service Classes</description>
    <label>Service Injection Setting</label>
    <pluralLabel>Service Injection Settings</pluralLabel>
</CustomObject>