force-app/main/default/objects/Service_Injection_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag whether service is active</description>
    <inlineHelpText>Flag whether service is active</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>