force-app/main/default/objects/Service_Injection_Setting__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Name of Apex Class to inject</description>
    <inlineHelpText>Name of Apex Class to inject</inlineHelpText>
    <label>Apex Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>