force-app/main/default/objects/Service_Injection_Setting__mdt/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <description>Description of Service</description>
    <inlineHelpText>Description of Service</inlineHelpText>
    <label>Service Description</label>
    <type>TextArea</type>
</CustomField>