force-app/main/default/objects/Service_Injection_Setting__mdt/fields/Service_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Service_Subtype__c</fullName>
    <description>Subtype of Service</description>
    <inlineHelpText>Subtype of Service</inlineHelpText>
    <label>Service Subtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>