force-app/main/default/objects/Service_Injection_Setting__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Type of Service</description>
    <inlineHelpText>Type of Service</inlineHelpText>
    <label>Service Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>