force-app/main/default/objects/Service_Injection_Setting__mdt/listViews/All_Active_Services.listView-meta.xml
<ListView>
    <fullName>All_Active_Services</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Subtype__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Services</label>
</ListView>